# videnoa

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: release.yaml  unittest.yaml
crates/app/: Cargo.toml  build.rs
crates/app/src/: lib.rs  main.rs
crates/core/: Cargo.toml  build.rs
crates/core/examples/: spike.rs  spike_async.rs  spike_iobinding.rs  spike_trt.rs
crates/core/proto/: onnx.proto3
crates/core/src/: compile.rs  config.rs  debug_event.rs  descriptor.rs  executor.rs  graph.rs  jellyfin.rs  lib.rs  logging.rs  model_inspect.rs  model_registry.rs  node.rs  registry.rs  runtime.rs  streaming_executor.rs  types.rs
crates/core/src/nodes/: backend.rs  color_space.rs  compile_context.rs  constant.rs  downloader.rs  frame_interpolation.rs  http_request.rs  jellyfin_video.rs  mod.rs  path_divider.rs  path_joiner.rs  print.rs  rescale.rs  resize.rs  scene_detect.rs  stream_input.rs  stream_output.rs  string_replace.rs  string_template.rs  super_res.rs  type_conversion.rs  video_input.rs  video_output.rs  workflow_io.rs
crates/core/src/server/: mod.rs  persistence.rs
crates/core/tests/: crash_hook.rs
crates/desktop/: Cargo.toml  build.rs  tauri.conf.json
crates/desktop/capabilities/: main-window-controls.json
crates/desktop/src/: main.rs
presets/: anime-2x-interpolation-2x.json  anime-2x-upscale.json  anime-4x-upscale.json  interpolation-2x-anime-2x.json  interpolation-2x.json  interpolation-3x-anime-2x.json
scripts/: package_dist.ps1  package_dist.sh  sync_icons.py
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  index.css  main.tsx
web/src/api/: client.ts  performance-validators.ts
web/src/api/__tests__/: client.test.ts
web/src/components/layout/: AppShell.tsx  Header.tsx  PageContainer.tsx
web/src/components/layout/__tests__/: Header.test.tsx
web/src/components/shared/: ErrorBoundary.tsx  JellyfinLogo.tsx  PathAutocomplete.tsx  PortField.tsx  Toaster.tsx  WorkflowPathPicker.tsx  port-field-utils.ts  workflow-list-utils.ts
web/src/components/shared/__tests__/: ErrorBoundary.test.tsx  PathAutocomplete.test.tsx  WorkflowPathPicker.test.tsx
web/src/components/ui/: badge.tsx  button.tsx  card.tsx  chart.tsx  checkbox.tsx  dialog.tsx  dropdown-menu.tsx  tabs.tsx
web/src/components/ui/__tests__/: dialog.test.tsx
web/src/i18n/: index.ts  node-title.ts
web/src/i18n/locales/: en.ts  types.ts  zh-CN.ts
web/src/lib/: constants.ts  presentation-error.ts  presentation-format.ts  runtime-desktop.ts
web/src/lib/__tests__/: presentation-error.test.ts  presentation-format.test.ts  runtime-desktop.test.ts  utils.test.ts
web/src/pages/editor/: CustomNode.tsx  DeletableEdge.tsx  EditorPage.tsx  EditorToolbar.tsx  NodePalette.tsx  PresetGallery.tsx  RunFromEditorDialog.tsx  TensorEdge.tsx  auto-layout.ts
web/src/pages/editor/__tests__/: CustomNode.test.tsx  EditorPage.test.tsx  NodePalette.test.tsx  PresetGallery.test.tsx  auto-layout.test.ts
web/src/pages/jobs/: JobsPage.tsx  RunWorkflowDialog.tsx  time-utils.ts
web/src/pages/jobs/__tests__/: JobsPage.test.tsx  RunWorkflowDialog.test.tsx
web/src/pages/models/: ModelDetail.tsx  ModelsPage.tsx
web/src/pages/performance/: PerformancePage.tsx  performance-colors.css
web/src/pages/performance/__tests__/: PerformancePage.test.tsx
web/src/pages/preview/: ComparisonViewer.tsx
web/src/pages/settings/: BatchPanel.tsx  SettingsPage.tsx
web/src/pages/settings/__tests__/: BatchPanel.test.tsx  SettingsPage.test.tsx
web/src/stores/: job-store.ts  node-definitions-store.ts  ui-store.ts  workflow-store.ts
web/src/stores/__tests__/: job-store.test.ts  node-definitions-store.test.ts  ui-store.test.ts  workflow-store.test.ts
web/src/test/: setup.ts
web/src/types/: index.ts
