[workspace]
members = ["crates/core", "crates/app", "crates/desktop"]
resolver = "2"

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
ort = { version = "=2.0.0-rc.11", default-features = false, features = ["std", "cuda", "tensorrt", "ndarray", "load-dynamic", "half"] }
half = "2"
ndarray = "0.17"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
petgraph = { version = "0.8", features = ["serde-1"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
clap = { version = "4", features = ["derive"] }
axum = { version = "0.8", features = ["ws"] }
sha2 = "0.10"
uuid = { version = "1", features = ["v4", "serde"] }
dashmap = "6"
tower-http = { version = "0.6", features = ["cors", "fs"] }
tower = { version = "0.5", features = ["util"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-util = "0.7"
reqwest = { version = "0.12", features = ["json", "blocking"] }
url = "2"
rust-embed = "8"
mime_guess = "2"
