[package]
name = "videnoa-app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "videnoa"
path = "src/main.rs"

[dependencies]
videnoa-core = { path = "../core" }
anyhow = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
